# marlowe-plutus

./: .gitignore  .hlint.yaml  README.md  cabal.project  flake.nix
.direnv/: flake-profile-1-link
airdrop/: airdrop.cabal
airdrop/airdrop-plutus-validator/Airdrop/: Validator.hs
airdrop/app/: Main.hs
airdrop/test/: Spec.hs
airdrop/test/Spec/Airdrop/: TokenAllocationTree.hs  Validator.hs
airdrop/test/Spec/Airdrop/Validator/: CostModel.hs
airdrop/token-allocation-tree/Airdrop/: TokenAllocationTree.hs
changelog.d/: 20231019_125415_brian.bush_PLT_7680.md  20231116_113942_brian.bush_PLT_8148.md  20231209_094720_brian.bush_PLT_7583.md  20231222_093546_brian.bush_PLT_7583.md
marlowe-plutus/: .gitignore  MarlowePlutusTester.md  charli3.ipynb  charli3.md  charli3.sh  create-flamegraphs.sh  marlowe-plutus.cabal
marlowe-plutus/app/: Main.hs
marlowe-plutus/app/Benchmark/: Marlowe.hs
marlowe-plutus/app/Benchmark/Marlowe/: RolePayout.hs  Semantics.hs  Types.hs  Util.hs
marlowe-plutus/app/Benchmark/Marlowe/Semantics/: Pretty.hs
marlowe-plutus/charli3/: Main.hs
marlowe-plutus/charli3-demo/: charli3.ipynb
marlowe-plutus/charli3/Language/Marlowe/Plutus/: Charli3.hs
marlowe-plutus/charli3/Language/Marlowe/Scripts/: Charli3.hs
marlowe-plutus/cost-measurements/: .gitignore  ReadMe.md  measure.R  measure.sh
marlowe-plutus/mint/: Main.hs
marlowe-plutus/src/Language/Marlowe/: Plutus.hs
marlowe-plutus/src/Language/Marlowe/Plutus/: OpenRoles.hs  RolePayout.hs  RoleTokens.hs  Script.hs  ScriptTypes.hs  Semantics.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Alt/: ScriptTypes.hs  Semantics.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Alt/Semantics/: Types.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Alt/Semantics/Types/: Address.hs
marlowe-plutus/src/Language/Marlowe/Plutus/AsData/: ScriptTypes.hs  Semantics.hs
marlowe-plutus/src/Language/Marlowe/Plutus/AsData/Semantics/: Types.hs
marlowe-plutus/src/Language/Marlowe/Plutus/AsData/Semantics/Types/: Address.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Experiment/: Script.hs  ScriptTypes.hs  Semantics.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Experiment/Semantics/: Types.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Experiment/Semantics/Types/: Address.hs
marlowe-plutus/src/Language/Marlowe/Plutus/RoleTokens/: Types.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Script/: Types.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Semantics/: Types.hs
marlowe-plutus/src/Language/Marlowe/Plutus/Semantics/Types/: Address.hs
marlowe-plutus/test/: Main.hs
marlowe-plutus/test/Language/Marlowe/: PlutusSpec.hs
nix/: cabal-project.nix  ci.nix  formatters.nix  haskell.nix  outputs.nix  per-system-outputs.nix  project.nix  read-the-docs.nix  shell.nix  top-level-outputs.nix
withdrawal-tree/: withdrawal-tree.cabal
withdrawal-tree/on-chain/Plutus/: WithdrawalTree.hs
withdrawal-tree/src/Plutus/: WithdrawalTree.hs
