cabal-version: 3.4
name:          airdrop
version:       0.0.1.0
license:       Apache-2.0
build-type:    Simple
maintainer:    tomasz.rybarczyk@iohk.io
stability:     experimental
author:        Tomasz Rybarczyk
synopsis:      Cardano token airdrop prototype
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-plutus

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

flag trace-plutus
  description: Enable Plutus trace log for Marlowe validators.
  default:     False
  manual:      True

flag profile-plutus
  description: Enable Plutus profiling for Marlowe validators.
  default:     False
  manual:      True

flag check-preconditions
  description:
    Validator checks whether preconditions are satisfied for the Marlowe state.

  default:     True
  manual:      True

flag check-positive-balances
  description:
    Validator checks whether any account balances are non-positive in the Marlowe state.

  default:     True
  manual:      True

flag check-duplicate-accounts
  description:
    Validator checks whether any accounts are duplicated in the Marlowe state.

  default:     True
  manual:      True

flag check-duplicate-choices
  description:
    Validator checks whether any choices are duplicated in the Marlowe state.

  default:     True
  manual:      True

flag check-duplicate-bindings
  description:
    Validator checks whether any bound values are duplicated in the Marlowe state.

  default:     True
  manual:      True

flag asdata-case
  description: Use `PlutusTx.asData` for `Case`.
  default:     True
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -fforce-recomp -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Werror

  if (flag(profile-plutus) || flag(trace-plutus))
    ghc-options: -fplugin-opt PlutusTx.Plugin:conservative-optimisation

  if flag(profile-plutus)
    ghc-options: -fplugin-opt PlutusTx.Plugin:profile-all

  if flag(trace-plutus)
    cpp-options: -DTRACE_PLUTUS

  if flag(check-preconditions)
    cpp-options: -DCHECK_PRECONDITIONS

  if flag(check-positive-balances)
    cpp-options: -DCHECK_POSITIVE_BALANCES

  if flag(check-duplicate-accounts)
    cpp-options: -DCHECK_DUPLICATE_ACCOUNTS

  if flag(check-duplicate-choices)
    cpp-options: -DCHECK_DUPLICATE_CHOICES

  if flag(check-duplicate-bindings)
    cpp-options: -DCHECK_DUPLICATE_BINDINGS

library airdrop-plutus-validator
  import:          lang
  hs-source-dirs:  airdrop-plutus-validator
  build-depends:
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , flat
    , lens
    , newtype-generics
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , serialise ^>=0.2.6

  exposed-modules: Airdrop.Validator

  if flag(asdata-case)
    cpp-options: -DASDATA_CASE

library token-allocation-tree
  import:          lang
  hs-source-dirs:  token-allocation-tree
  build-depends:
    , airdrop:airdrop-plutus-validator
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , containers
    , flat
    , lens
    , newtype-generics
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , serialise ^>=0.2.6
    , sqlite-simple ^>=0.4.18.0

  exposed-modules: Airdrop.TokenAllocationTree

  if flag(asdata-case)
    cpp-options: -DASDATA_CASE

test-suite airdrop-test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:  Spec.Airdrop.TokenAllocationTree
  build-depends:
    , airdrop:token-allocation-tree
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , containers
    , hspec
    , sqlite-simple ^>=0.4.18.0

executable airdrop
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , airdrop:airdrop-plutus-validator
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , flat
    , lens
    , newtype-generics
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , serialise ^>=0.2.6
    , sqlite-simple ^>=0.4.18.0
