cabal-version: 3.4
name:          airdrop
version:       0.0.1.0
license:       Apache-2.0
build-type:    Simple
maintainer:    tomasz.rybarczyk@iohk.io
stability:     experimental
author:        Tomasz Rybarczyk
synopsis:      Cardano token airdrop prototype
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-plutus

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

flag profile-plutus
  description: Enable Plutus profiling for the validator.
  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -fforce-recomp -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Werror

  if flag(profile-plutus)
    ghc-options: -fplugin-opt PlutusTx.Plugin:conservative-optimisation

  if flag(profile-plutus)
    ghc-options: -fplugin-opt PlutusTx.Plugin:profile-all

library airdrop-plutus-validator
  import:          lang
  hs-source-dirs:  airdrop-plutus-validator
  build-depends:
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , flat
    , lens
    , newtype-generics
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , serialise ^>=0.2.6

  exposed-modules: Airdrop.Validator

library token-allocation-tree
  import:          lang
  hs-source-dirs:  token-allocation-tree
  build-depends:
    , airdrop:airdrop-plutus-validator
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , containers
    , errors
    , flat
    , lens
    , mtl
    , newtype-generics
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , serialise ^>=0.2.6
    , sqlite-simple ^>=0.4.18.0

  exposed-modules: Airdrop.TokenAllocationTree

test-suite airdrop-test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.Airdrop.TokenAllocationTree
    Spec.Airdrop.Validator
    Spec.Airdrop.Validator.CostModel

  build-depends:
    , airdrop:{airdrop-plutus-validator, token-allocation-tree}
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , containers
    , hspec
    , hspec-discover
    , hspec-expectations
    , mtl
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , QuickCheck
    , quickcheck-instances
    , sqlite-simple ^>=0.4.18.0
    , text
    , transformers

executable airdrop
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , airdrop:airdrop-plutus-validator
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , flat
    , lens
    , newtype-generics
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , serialise ^>=0.2.6
    , sqlite-simple ^>=0.4.18.0
