cabal-version: 3.4
name:          marlowe-plutus
version:       0.1.1.0
license:       Apache-2.0
build-type:    Simple
maintainer:    brian.bush@iohk.io
stability:     experimental
author:        Alexander Nemish
synopsis:      Marlowe plutus validators
category:      Language
license-files:
  LICENSE
  NOTICE

data-files:
  benchmarks/rolepayout/*.benchmark
  benchmarks/semantics/*.benchmark
  reference/data/*.contract
  reference/data/*.paths

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-plutus

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

flag trace-plutus
  description: Enable Plutus trace log for Marlowe validators.
  default:     False
  manual:      True

flag check-preconditions
  description:
    Validator checks whether preconditions are satisfied for the Marlowe state.

  default:     True
  manual:      False

flag check-positive-balances
  description:
    Validator checks whether any account balances are non-positive in the Marlowe state.

  default:     True
  manual:      False

flag check-duplicate-accounts
  description:
    Validator checks whether any accounts are duplicated in the Marlowe state.

  default:     True
  manual:      False

flag check-duplicate-choices
  description:
    Validator checks whether any choices are duplicated in the Marlowe state.

  default:     True
  manual:      False

flag check-duplicate-bindings
  description:
    Validator checks whether any bound values are duplicated in the Marlowe state.

  default:     True
  manual:      False

flag plutus-asdata
  description:
    DANGER: Use alternative implementation relying on `PlutusTx.asData`.

  default:     False
  manual:      True

flag validator-experiment
  description: DANGER: Use the experimental, unaudited validator.
  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Werror

  if flag(trace-plutus)
    cpp-options: -DTRACE_PLUTUS
    ghc-options:
      -fforce-recomp -fplugin-opt
      PlutusTx.Plugin:conservative-optimisation

  else
    ghc-options: -fforce-recomp -fplugin-opt PlutusTx.Plugin:remove-trace

  if flag(check-preconditions)
    cpp-options: -DCHECK_PRECONDITIONS

  if flag(check-positive-balances)
    cpp-options: -DCHECK_POSITIVE_BALANCES

  if flag(check-duplicate-accounts)
    cpp-options: -DCHECK_DUPLICATE_ACCOUNTS

  if flag(check-duplicate-choices)
    cpp-options: -DCHECK_DUPLICATE_CHOICES

  if flag(check-duplicate-bindings)
    cpp-options: -DCHECK_DUPLICATE_BINDINGS

library
  import:          lang
  hs-source-dirs:  src
  build-depends:
    , base ^>=4.16.4.0 && <5
    , bytestring >=0.11.4.0 && <0.12
    , cardano-crypto-class
    , flat
    , lens
    , marlowe-cardano ==0.2.1.0
    , newtype-generics
    , plutus-core ==1.15.0.0
    , plutus-ledger-api ==1.15.0.0
    , plutus-tx ==1.15.0.0
    , plutus-tx-plugin ==1.15.0.0
    , serialise ^>=0.2.6

  exposed-modules:
    Language.Marlowe.Plutus
    Language.Marlowe.Plutus.AsData.ScriptTypes
    Language.Marlowe.Plutus.AsData.Semantics
    Language.Marlowe.Plutus.AsData.Semantics.Types
    Language.Marlowe.Plutus.AsData.Semantics.Types.Address
    Language.Marlowe.Plutus.Experiment.Script
    Language.Marlowe.Plutus.Experiment.ScriptTypes
    Language.Marlowe.Plutus.Experiment.Semantics
    Language.Marlowe.Plutus.Experiment.Semantics.Types
    Language.Marlowe.Plutus.Experiment.Semantics.Types.Address
    Language.Marlowe.Plutus.OpenRoles
    Language.Marlowe.Plutus.RolePayout
    Language.Marlowe.Plutus.RoleTokens
    Language.Marlowe.Plutus.RoleTokens.Types
    Language.Marlowe.Plutus.Semantics

  if flag(plutus-asdata)
    cpp-options: -DPLUTUS_ASDATA

executable marlowe-validators
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Benchmark.Marlowe
    Benchmark.Marlowe.RolePayout
    Benchmark.Marlowe.Semantics
    Benchmark.Marlowe.Types
    Benchmark.Marlowe.Util
    Paths_marlowe_plutus

  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , containers
    , directory
    , filepath
    , marlowe-cardano ==0.2.1.0
    , marlowe-plutus
    , mtl
    , plutus-core:{plutus-core, plutus-core-execlib}
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , text

  ghc-options:    -threaded

  if flag(validator-experiment)
    cpp-options: -DVALIDATOR_EXPERIMENT

executable marlowe-minting-validator
  import:         lang
  hs-source-dirs: mint
  main-is:        Main.hs
  build-depends:
    , aeson
    , base
    , base16
    , bytestring
    , containers
    , marlowe-plutus
    , plutus-ledger-api
    , plutus-tx
    , text

  ghc-options:    -threaded

test-suite marlowe-plutus
  import:             lang
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Language.Marlowe.PlutusSpec
    Paths_marlowe_plutus

  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api
    , containers
    , data-default
    , directory
    , filepath
    , hspec
    , lens
    , marlowe-cardano ==0.2.1.0
    , marlowe-plutus
    , marlowe-test ==0.2.1.0
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , serialise
    , transformers

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded

executable marlowe-plutus-tester
  import:             lang
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Language.Marlowe.PlutusSpec
    Paths_marlowe_plutus

  build-depends:
    , aeson
    , base
    , bytestring
    , cardano-api
    , cardano-crypto-class
    , containers
    , data-default
    , directory
    , filepath
    , hspec
    , hspec-core
    , lens
    , marlowe-cardano ==0.2.1.0
    , marlowe-plutus
    , marlowe-test ==0.2.1.0
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , serialise
    , transformers

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded

executable marlowe-charli3
  import:         lang
  hs-source-dirs: charli3
  main-is:        Main.hs
  other-modules:  Language.Marlowe.Plutus.Charli3
  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , marlowe-cardano ==0.2.1.0
    , marlowe-plutus
    , optparse-applicative
    , oracle-feed
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ghc-options:    -threaded
